--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Posts</title>
 </head>
 <body>
-    <p>Welcome to the home page</p>
+    <h1>Posts</h1>
+    <form id="add-post-form">
+        <label for="title">Title:</label><br />
+        <input type="text" id="title" name="title" /><br />
+        <button type="submit">Add Post</button>
+    </form>
+    <br/>
+    <button id="get-posts-btn">Get Posts</button>
+    <div id="output"></div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
